added supported components for login and inital level grid display [for express api]

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,19 @@
   <meta charset="utf-8">
   <title>AngularApp</title>
   <base href="/">
-
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <!-- <div class="ui-g ui-fluid">
+      <div class="ui-g-1 ui-md-1 ui-sm-1"> 
+        </div>
+        <div class="ui-g-10 ui-md-10 ui-sm-10">  -->
+            <app-root></app-root>  
+          <!-- </div>
+          <div class="ui-g-1 ui-md-1 ui-sm-1"> 
+            </div>
+  </div> -->
 </body>
 </html>
